[package]
name = "collie-auth"
version = "0.1.0"
edition = "2021"

[lib]
name = "collie_auth"
path = "src/lib.rs"

[dependencies]
collie-core = { version = "0.1.0", path = "../collie-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
rusqlite = "0.31"
sea-query = "0"
sea-query-rusqlite = { version = "0", features = ["with-chrono"] }
thiserror = "1.0"
rand = "0.8.5"
jsonwebtoken = "9.3.0"
