[package]
name = "collie-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "collie_core"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
rusqlite = "0.31"
sea-query = "0"
sea-query-rusqlite = { version = "0", features = ["with-chrono"] }
rss = "2.0"
atom_syndication = "0.12"
reqwest = { version = "0.11", features = ["blocking"] }
sha1_smol = { version = "1", features = ["std"] }
thiserror = "1.0"
regex = "1.9"
scraper = "0.18.1"
rand = "0.8.5"

[dev-dependencies]
tokio = { version = "1.40", features = ["macros"] }
pretty_assertions = "1.4"
