[package]
name = "collie"
version = "0.1.0"
authors = ["Simon Park <parkgds@gmail.com>"]
license = "AGPL-3.0-or-later"
edition = "2021"
repository = "https://github.com/collie-reader/lib"
description = """
A library for the minimal feed reader.
"""

[lib]
name = "collie"
path = "src/lib.rs"

[dependencies]
collie-core = { version = "0.1.0", path = "../collie-core" }
collie-auth = { version = "0.1.0", path = "../collie-auth", optional = true }

[features]
default = ["core"]
core = []
auth = ["collie-auth"]
